deploy/payment-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: ecommerce
  labels:
    app: payment-service
    service: payment-service
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: payment-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: ecommerce
  labels:
    app: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      serviceAccount: payment-sa
      containers:
      - name: payment-service
        image: docker.io/bjimerson/payment-service
        ports:
        - containerPort: 8080
